[package]
name = "home_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
am2320 = { version = "0.2.0", path = "deps/am2320.rs" }
chrono = "0.4.23"
embedded-hal = "0.2.7"
gpio = "0.4.1"
i2cdev = "0.5.1"
linux-embedded-hal = "0.3.2"
log = "0.4.17"
num = "0.4.0"
rocket = "0.5.0-rc.2"
simple_logger = "4.0.0"
